--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDb": {
+    "ConnectionString": "mongodb+srv://DriverStatsUser:Baghira2011@clusterds.olxb2.mongodb.net/?retryWrites=true&w=majority&appName=ClusterDS",
+    "DatabaseName": "DriverStatsDb",
+    "UserCollection": "users",
+    "fahrtenCollection": "fahrten",
+    "einstellungenCollection": "einstellungen"
+  }
 }
